syntax = "proto3";

package chat;

message ChatMessage {
  int64 chatroomId = 1;
  int64 senderId = 2;
  int64 receiverId = 3;
  string content = 4;
  int64 timestamp = 5; // milliseconds
}

service ChatService {
  rpc Chat(stream ChatMessage) returns (stream ChatMessage);
}
